name:                scheme-parser
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/azure-satellite/scheme-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Alejandro Hernandez
maintainer:          azure.satellite@gmail.com
copyright:           2016 Alejandro Hernandez
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable scheme-parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scheme-parser
  default-language:    Haskell2010

test-suite scheme-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , scheme-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/azure-satellite/scheme-parser
